[package]
name = "example-fifo-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
agave-scheduler-bindings = { git = "https://github.com/anza-xyz/agave.git", rev = "dcd98dcb63fb7c7e8320ccba7f5c25d56a2bc73a", features = [
    "agave-unstable-api",
] }
agave-scheduling-utils = { git = "https://github.com/anza-xyz/agave.git", rev = "dcd98dcb63fb7c7e8320ccba7f5c25d56a2bc73a", features = [
    "agave-unstable-api",
] }
agave-transaction-view = { git = "https://github.com/anza-xyz/agave.git", rev = "dcd98dcb63fb7c7e8320ccba7f5c25d56a2bc73a", features = [
    "agave-unstable-api",
] }
rts-alloc = "1.0.0"
shaq = "1.0.0"
signal-hook = "0.3.18"
solana-pubkey = "3.0.0"
